bk_ida/gobmkida/g3/edge_clamp_moves
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/edge_clamp_moves/src/engine/reading.c:2618:7: error: use of undeclared identifier 'dword_785CFC'
v10 = dword_785CFC[v7]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/edge_clamp_moves/src/engine/reading.c:2635:6: error: use of undeclared identifier 'dword_785CFC'
up = dword_785CFC[v7]; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/edge_clamp_moves/src/obj/1/reading.o] Error 1
